Remove direct descendant from selector to increase reuse.

--- a/_objects.exhibit.scss
+++ b/_objects.exhibit.scss
@@ -3,10 +3,9 @@
 \*------------------------------------*/
 
 .exhibit {
-	
-	&__media > img {
+
+	&__media {
 		display: block;
 		margin: 0 auto;
 	}
-  
 }
